[project]
name = "library"
version = "0.1.0"
description = "Library management system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "redis>=7.4.0",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "asyncpg>=0.31.0",
    "fakeredis>=2.35.1",
    "pylint>=3.3.0",
    "bandit>=1.8.0",
    "codespell>=2.3.0",
    "pip-audit>=2.7.0",
    "pip-licenses>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
